--- a/css/sub1.css
+++ b/css/sub1.css
@@ -34,16 +34,12 @@ footer{
     border: 1px solid #666;
 
     box-sizing: border-box;
-    padding: 70PX;
+    padding: 30px 70PX;
     text-align: center;
     
 }
 
-.spclBty{
-
-
-    background-color: white;
-    padding: 10px;
-    border: 1px solid #666;
-    border-radius: 50%;
+.text .list > img{
+    max-width: 100px;
+    border-radius: 10px;
 }
