--- a/css/sub3.css
+++ b/css/sub3.css
@@ -1,3 +1,6 @@
+body, html{
+    height: 100%;
+}
 .banner .title-bg{
     width: 100%;
     height: 300px;
@@ -77,4 +80,42 @@ footer{
 }
 .text .star{
     color: #fee820;
+}
+
+/* modal */
+#ModalBg{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 99;
+
+    display: none;
+}
+#ModalBg > div{
+    width: 800px;
+    height: 700px;
+    background-color: white;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 150px auto 0;
+    box-sizing: border-box;
+    padding: 50px;
+}
+#ModalBg > div > span{
+    font-size: 18px;
+    font-weight: bold;
+
+    margin-bottom: 20px;
+}
+#ModalBg > div >span > input{
+    width: 700px;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid gray;
+
+    /* border: 0; */
 }
