--- a/css/sub3.css
+++ b/css/sub3.css
@@ -127,3 +127,25 @@ footer{
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 90;
 }
+/* star */
+.star {
+    position: relative;
+    font-size: 20px;
+    color: #ddd;
+}
+.star input {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+.star span{
+    width: 0;
+    position: absolute;
+    left: 0;
+    color: #fee820;
+    overflow: hidden;
+    pointer-events: none;
+}
