--- a/css/sub3.css
+++ b/css/sub3.css
@@ -22,8 +22,6 @@ footer{
     bottom: 50px;
     right: 230px;
 
-    /* width: 60px;
-    height: 60px; */
     border-radius: 10px;
     background-color: white;    
 
@@ -90,7 +88,7 @@ footer{
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 99;
 
-    /* display: none; */
+    display: none;
 }
 #ModalBg > div{
     width: 800px;
@@ -117,7 +115,6 @@ footer{
     border: none;
     border-bottom: 1px solid gray;
 
-    /* border: 0; */
 }
 /* star */
 .star {
