--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    position: fixed;
+    top: 0;
+    z-index: 99;   
 }
 /* nav */
 .nav{
@@ -38,8 +42,7 @@ header{
 /* share */
 .sub-nav{
     position: absolute;
-    padding-top: 7px;
-    z-index: 99;    
+    padding-top: 7px; 
 }
 .sub-nav ul{
     height: 0;
@@ -254,4 +257,361 @@ footer p{
     line-height: 30px;
     font-size: 15px;
     font-weight: lighter;
+}
+
+/* sub페이지 공통사항 */
+.sub1 footer, .sub2 footer, .sub3 footer{
+    position: inherit;
+}
+h4{
+    color: #a4a9af;
+}
+.banner .title-bg{
+    width: 100%;
+    background-color: rgba(229, 230, 237, 0.5);
+
+    box-sizing: border-box;
+    padding: 100px 420px;
+    z-index: 9;
+}
+
+/* sub1 */
+.sub1-content{
+    box-sizing: border-box;
+    padding: 100px 320px;
+}
+.sub1-content .box{
+    background-color:  rgba(218, 218, 218, 0.2);
+    padding: 20px 50px;
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.sub1-content .text{
+    width: 400px;
+    height: 350px;
+    background-color: white;
+    border-radius: 20px;
+    border: 1px solid #666;
+
+    box-sizing: border-box;
+    padding: 30px 70PX;
+    text-align: center;
+    
+}
+
+.sub1-content .text .list > img{
+    max-width: 100px;
+    border-radius: 10px;
+}
+
+/* sub2페이지 */
+
+/* 글자 */
+.sub2 .banner .title-bg h2{
+    color: blue;
+}
+.sub2 .banner .title-bg h5{
+    font-size: 17px;
+}
+
+/* content */
+.sub2 .event-content{
+    box-sizing: border-box;
+    padding: 100px 420px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* 스템프 구역 */
+.sub2 .event-content .check-box{
+    width: 100%;
+    height: 330px;
+    border: 1px solid #DFE3EA;
+
+    display: flex;
+}
+.sub2 .event-content .titl{
+    width: 423px;
+    height: inherit;
+    background-color: #0070FF;
+
+    box-sizing: border-box;
+    padding: 90px 65px;
+    float: left;
+
+    color: white;
+}
+/* 스템프 */
+.sub2 .event-content .stamp{
+    box-sizing: border-box;
+    padding: 39px;
+    float: left;
+
+    width: calc(100% - 423px);
+    height: inherit;
+
+}
+.sub2 .event-content .stamp .font{
+    width: 390px;
+    height: 78px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+
+}
+.sub2 .event-content .stamp p{
+    font-size: 18px;
+    font-weight: 600;
+
+}
+.sub2 .event-content .stamp-star{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #C2C9E0;
+
+    text-align: center;
+    line-height: 60px;
+    font-size: 39px;
+    color: #9CA5C3;
+    
+}
+.sub2 .event-content .stamp ul{
+    margin-top: 20px;
+    border-top: 1px solid #DFE3EA;
+    padding: 50px 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.sub2 .event-content .stamp ul li span{
+    display: inline-block;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    border: 3px solid #9CA5C3;
+    margin-bottom: 10px;
+}
+/* 게임 소개 */
+.sub2 .text{
+    padding: 40px 0;
+    background-color: rgba(229, 230, 237, 0.5);
+    text-align: center;
+}
+/* 카드게임 */
+.sub2 .event-content .cards{
+    background-color: #D4D8DF;
+    padding: 20px 30px;
+    border-radius: 20px;
+}
+.sub2 .event-content .Cbox{
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+.sub2 .event-content .card{
+    width: 130px;
+    height: 150px;
+    background-color: #a4a9af;
+    border-radius: 20px;
+
+    cursor: pointer;
+}
+.sub2 .Cbox:first-child .card:nth-child(3){
+    background-image: url(../특산품/양산시_매실.jpg);
+}
+.sub2 .Cbox:nth-child(3) .card:first-child{
+    background-image: url(../특산품/양산시_매실.jpg);
+}
+/* 스코어 */
+.sub2 .event-content .game{
+    text-align: center;
+}
+.sub2 .event-content .game .score{
+    width: 300px;
+    height: 300px;
+    background-color: #D4D8DF;
+    border-radius: 10px;
+
+    overflow: hidden;
+    margin: 0 auto;
+
+    line-height: 80px;
+    font-size: 25px;
+}
+/* 시간 */
+.sub2 .time{
+    width: inherit;
+    height: 75px;
+    background-color: black;
+
+    color: white;
+    font-size: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.sub2 .time strong{
+    font-size: 25px;
+}
+
+/* button  */
+.sub2 button{
+    width: 100px;
+    height: 43px;
+
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+
+    border-radius: 5px;
+    margin: 30px 10px;
+    border: none;
+    cursor: pointer;
+}
+.sub2 .refresh{
+    background: #616A72;
+}
+.sub2 .start{
+    background: #0070FF;
+}
+
+/* sub3 페이지 */
+
+/* 후기작성 */
+.sub3 #WriteBtn{
+    position: fixed;
+    bottom: 50px;
+    right: 230px;
+
+    border-radius: 10px;
+    background-color: white;    
+
+    font-weight: 800;
+    font-size: 15px;
+    color: white;
+    background-color: #a4a9af;
+
+    box-sizing: border-box;
+    padding: 5px 10px;
+}
+/* content */
+.sub3 .review-content{
+    box-sizing: border-box;
+    padding: 100px 420px;
+}
+.sub3 .review-content ul{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.sub3 .review-content .box{
+    width: 300px;
+    height: 350px;
+    border: 2px solid lavender;
+    border-radius: 10px;
+
+    text-align: center;
+}
+.sub3 .box .img-box{
+    width: 100%;
+    height: 220px;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+
+}
+.sub3 .box .img-box img{
+    max-width: 100%;
+}
+/* 내용 */
+.sub3 .box .text{
+    margin: 10px 15px;
+}
+.sub3 .text p{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.sub3 .text span{
+    font-weight: lighter;
+}
+.sub3 .text h5{
+    font-size: 17px;
+}
+.sub3 .text .stars{
+    color: #fee820;
+}
+
+/* modal */
+.sub3 #modal{
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    z-index: 91;
+}
+.sub3 #modalItem{
+    position: relative;
+    width: 800px;
+    height: 700px;
+    background-color: white;
+    border-radius: 20px;
+    
+    display: flex;
+    flex-direction: column;
+    
+    margin: 150px auto 0;
+    box-sizing: border-box;
+    padding: 50px;
+    z-index: 99;
+}
+.sub3 #modalItem > span{
+    font-size: 18px;
+    font-weight: bold;
+    
+    margin-bottom: 20px;
+}
+.sub3 #modalItem > span > input{
+    width: 700px;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid gray;
+}
+.sub3 #modalBackground {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 90;
+}
+/* star */
+.sub3 .star {
+    position: relative;
+    font-size: 20px;
+    color: #ddd;
+}
+.sub3 .star input {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+.sub3 .star span{
+    width: 0;
+    position: absolute;
+    left: 0;
+    color: #fee820;
+    overflow: hidden;
+    pointer-events: none;
 }
