--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ a{text-decoration: none;}
 html,body{
     height: 100%; 
 }
+.d-none{
+    display: none;
+}
+.card-hidden{
+    display: none;
+}
+
 #Over{
     overflow: hidden;
 }
@@ -91,7 +98,7 @@ input[type="checkbox"]:checked ~ label #colse{
     display: block;
 }
 input[type="checkbox"]:checked ~ label  ul{
-        height: 150px;
+        height: 130px;
         transition: all 0.5s;
         padding: 10px;
 }
@@ -261,7 +268,7 @@ footer p{
 
 /* sub페이지 공통사항 */
 .sub1 footer, .sub2 footer, .sub3 footer{
-    position: inherit;
+    position: relative;
 }
 h4{
     color: #a4a9af;
@@ -276,6 +283,10 @@ h4{
 }
 
 /* sub1 */
+.sub1 #menu > li:nth-child(1) > a {
+    color: #0070FF;
+    font-weight: bold;
+}
 .sub1-content{
     box-sizing: border-box;
     padding: 100px 320px;
@@ -308,7 +319,10 @@ h4{
 }
 
 /* sub2페이지 */
-
+.sub2 #menu > li:nth-child(2) > a {
+    color: #0070FF;
+    font-weight: bold;
+}
 /* 글자 */
 .sub2 .banner .title-bg h2{
     color: blue;
@@ -317,45 +331,43 @@ h4{
     font-size: 17px;
 }
 
-/* content */
-.sub2 .event-content{
-    box-sizing: border-box;
-    padding: 100px 420px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 /* 스템프 구역 */
-.sub2 .event-content .check-box{
+.sub2 .check-box{
     width: 100%;
-    height: 330px;
     border: 1px solid #DFE3EA;
-
     display: flex;
+    margin-top: 100px;
 }
-.sub2 .event-content .titl{
+/* content */
+.sub2 .container{
+    width: 100%;
+    max-width: 960px;
+    /* padding: 0 15px; */
+
+    margin: 50px auto;
+}
+.sub2 .check-box .titl{
     width: 423px;
     height: inherit;
     background-color: #0070FF;
 
     box-sizing: border-box;
-    padding: 90px 65px;
+    padding: 100px 65px;
     float: left;
 
     color: white;
 }
 /* 스템프 */
-.sub2 .event-content .stamp{
+.sub2 .stamp{
     box-sizing: border-box;
-    padding: 39px;
+    padding-top: 39px;
     float: left;
 
     width: calc(100% - 423px);
     height: inherit;
 
 }
-.sub2 .event-content .stamp .font{
+.sub2 .stamp .font{
     width: 390px;
     height: 78px;
     display: flex;
@@ -364,24 +376,12 @@ h4{
     margin: 0 auto;
 
 }
-.sub2 .event-content .stamp p{
+.sub2 .stamp p{
     font-size: 18px;
     font-weight: 600;
-
 }
-.sub2 .event-content .stamp-star{
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-color: #C2C9E0;
 
-    text-align: center;
-    line-height: 60px;
-    font-size: 39px;
-    color: #9CA5C3;
-    
-}
-.sub2 .event-content .stamp ul{
+.sub2 .stamp .daily-check{
     margin-top: 20px;
     border-top: 1px solid #DFE3EA;
     padding: 50px 0;
@@ -389,102 +389,79 @@ h4{
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    text-align: center;
 }
-.sub2 .event-content .stamp ul li span{
-    display: inline-block;
-    width: 75px;
-    height: 75px;
+.checked-mark{
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     border: 3px solid #9CA5C3;
     margin-bottom: 10px;
 }
-/* 게임 소개 */
-.sub2 .text{
-    padding: 40px 0;
-    background-color: rgba(229, 230, 237, 0.5);
+.sub2 .stamp-star{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background-color: #C2C9E0;
+
     text-align: center;
+    line-height: 70px;
+    font-size: 50px;
+    color: #9CA5C3;
+    
 }
-/* 카드게임 */
-.sub2 .event-content .cards{
-    background-color: #D4D8DF;
-    padding: 20px 30px;
-    border-radius: 20px;
-}
-.sub2 .event-content .Cbox{
-    width: 600px;
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-}
-.sub2 .event-content .card{
-    width: 130px;
-    height: 150px;
-    background-color: #a4a9af;
-    border-radius: 20px;
-
-    cursor: pointer;
-}
-.sub2 .Cbox:first-child .card:nth-child(3){
-    background-image: url(../특산품/양산시_매실.jpg);
-}
-.sub2 .Cbox:nth-child(3) .card:first-child{
-    background-image: url(../특산품/양산시_매실.jpg);
-}
-/* 스코어 */
-.sub2 .event-content .game{
-    text-align: center;
-}
-.sub2 .event-content .game .score{
-    width: 300px;
-    height: 300px;
-    background-color: #D4D8DF;
-    border-radius: 10px;
-
-    overflow: hidden;
-    margin: 0 auto;
-
-    line-height: 80px;
-    font-size: 25px;
-}
-/* 시간 */
-.sub2 .time{
-    width: inherit;
-    height: 75px;
-    background-color: black;
-
-    color: white;
-    font-size: 20px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.sub2 .time strong{
-    font-size: 25px;
-}
-
 /* button  */
-.sub2 button{
-    width: 100px;
-    height: 43px;
-
-    font-size: 16px;
+.sub2 .buttons{
+    width: 100%;
+    height: 200px;
+    background-color: #DFE3EA;
+    text-align: center;
+    line-height: 100px;
+    font-size: 17px;
     font-weight: bold;
-    color: white;
-
-    border-radius: 5px;
-    margin: 30px 10px;
-    border: none;
-    cursor: pointer;
 }
-.sub2 .refresh{
+.sub2 .buttons a{
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #0070FF;
+}
+.sub2 .refresh-btn{
     background: #616A72;
 }
-.sub2 .start{
-    background: #0070FF;
+.sub2 .card-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+}
+.sub2 .spec-card{
+    max-width: 25%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 /* sub3 페이지 */
+.sub3 #menu > li:nth-child(3) > a {
+    color: #0070FF;
+    font-weight: bold;
+}
+.sub2 .card-image{
+    position: relative;
+    border: 1px solid #a4a9af;
+}
+.sub2 img{
+    max-width: 100%;
+}
+.sub2 .card-body{
+    width: 100%;
+    text-align: center;
+    background-color: white;
+    font-size: 20px;
+
+    position: absolute;
+    bottom: 0;
+
+}
 
 /* 후기작성 */
 .sub3 #WriteBtn{
