--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header{
 
     position: fixed;
     top: 0;
-    z-index: 99;   
+    z-index: 9;   
 }
 /* nav */
 .nav{
@@ -377,8 +377,8 @@ h4{
 
 }
 .sub2 .stamp p{
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 100;
 }
 
 .sub2 .stamp .daily-check{
@@ -391,6 +391,11 @@ h4{
     justify-content: space-around;
 
     text-align: center;
+}
+.sub2 .check-card-active{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .checked-mark{
     width: 90px;
@@ -434,20 +439,14 @@ h4{
     display: flex;
     flex-wrap: wrap;
 }
-.sub2 .spec-card{
+.sub2 .spec-card, .sub2 .spec-card-correct{
     max-width: 25%;
     padding: 10px;
     box-sizing: border-box;
 }
 
-/* sub3 페이지 */
-.sub3 #menu > li:nth-child(3) > a {
-    color: #0070FF;
-    font-weight: bold;
-}
 .sub2 .card-image{
     position: relative;
-    border: 1px solid #a4a9af;
 }
 .sub2 img{
     max-width: 100%;
@@ -457,13 +456,64 @@ h4{
     text-align: center;
     background-color: white;
     font-size: 20px;
-
+    
     position: absolute;
     bottom: 0;
+    
+}
 
+#finish-modal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+#finish-modal .modal-content{
+    width: 60%;
+    height: 30%;
+    background-color: white;
+    border: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 20px;
+    margin: 15% auto;
+}
+#finish-modal .modal-content form{
+    display: flex;
+}
+#finish-modal .modal-content input{
+    font-size: 17px;
+    margin: 4px;
+}
+#finish-modal .modal-content button{
+    display: block;
+    margin: 10px;
+    padding: 15px;
+    font-size: 15px;
+    text-align: center;
+}
+.message-modal{
+    width: 100%;
+    /* height: 10%; */
+    position: fixed;
+    z-index: 9999;
+    background-color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: green;
 }
 
 /* 후기작성 */
+.sub3 #menu > li:nth-child(3) > a {
+    color: #0070FF;
+    font-weight: bold;
+}
 .sub3 #WriteBtn{
     position: fixed;
     bottom: 50px;
