--- a/css/style.css
+++ b/css/style.css
@@ -114,32 +114,6 @@ input[type="checkbox"]:checked  ~ label #open{
 .banner{
     position: relative;
 }
-.banner .slogan-bg{
-    position: absolute;
-    width: 100%;
-    height: 400px;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-
-    text-align: center;
-}
-.banner .slogan{
-    transform: translateY(100%);
-}
-.banner .slogan-img{
-    position: absolute;
-    top: 0;
-
-    width: 100%;
-    height: 400px;
-    
-    background-image: url(../사진/photo\ \(5\).jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-}
-
 /* content */
 .content{
     margin-top: 40px;
@@ -497,7 +471,7 @@ h4{
     font-size: 15px;
     text-align: center;
 }
-.message-modal{
+.alert{
     width: 100%;
     /* height: 10%; */
     position: fixed;
@@ -506,10 +480,81 @@ h4{
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+}
+.message-modal{
     color: green;
 }
-
+.review-success{
+    color: green;
+}
+.review-failure{
+    color: red;
+}
 /* 후기작성 */
+
+/* Review */
+.review-modal{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.review-modal .review-content{
+    width: 50%;
+    height: 70%;
+    background-color: white;
+    border-radius: 1%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 50px;
+
+    margin: 100px auto;
+}
+.review-modal #review-form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 20px;
+}
+#review-form .review-img-container {
+    width: 100%;
+    height: 110px;
+    padding: 5px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+#review-form > *{
+    margin: 5px 0;
+    
+}
+#review-form input{
+    font-size: 15px;
+}
+#review-form .files-label{
+    padding: 0;
+    margin-bottom: 0;
+    margin-right: 5px;
+    width: 100px;
+    height: 100px;
+    border: 1px solid lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+#review-form .upload-img {
+    width: 100px;
+    height: 100px;
+    margin-right: 5px;
+    object-fit: cover;
+}
+
 .sub3 #menu > li:nth-child(3) > a {
     color: #0070FF;
     font-weight: bold;
@@ -531,16 +576,16 @@ h4{
     padding: 5px 10px;
 }
 /* content */
-.sub3 .review-content{
+.sub3 .review-contents{
     box-sizing: border-box;
     padding: 100px 420px;
 }
-.sub3 .review-content ul{
+.sub3 .review-contents ul{
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
-.sub3 .review-content .box{
+.sub3 .review-contents .box{
     width: 300px;
     height: 350px;
     border: 2px solid lavender;
@@ -577,49 +622,6 @@ h4{
     color: #fee820;
 }
 
-/* modal */
-.sub3 #modal{
-    width: 100%;
-    height: 100%;
-    display: none;
-    position: fixed;
-    z-index: 91;
-}
-.sub3 #modalItem{
-    position: relative;
-    width: 800px;
-    height: 700px;
-    background-color: white;
-    border-radius: 20px;
-    
-    display: flex;
-    flex-direction: column;
-    
-    margin: 150px auto 0;
-    box-sizing: border-box;
-    padding: 50px;
-    z-index: 99;
-}
-.sub3 #modalItem > span{
-    font-size: 18px;
-    font-weight: bold;
-    
-    margin-bottom: 20px;
-}
-.sub3 #modalItem > span > input{
-    width: 700px;
-    height: 30px;
-    border: none;
-    border-bottom: 1px solid gray;
-}
-.sub3 #modalBackground {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 90;
-}
 /* star */
 .sub3 .star {
     position: relative;
